--- a/slides/index.html
+++ b/slides/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
-    <title>reveal.js</title>
+    <title>ArcGIS API for JavaScript: Customizing Widgets</title>
 
     <link rel="stylesheet" href="../node_modules/esri-reveal.js-templates/css/reveal.css" />
     <link rel="stylesheet" href="../node_modules/esri-reveal.js-templates/css/theme/dev-summit-2019.css" />
