--- a/demos/custom-compass/index.html
+++ b/demos/custom-compass/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="initial-scale=1, maximum-scale=1,user-scalable=no" />
-    <link rel="stylesheet" href="https://jsdev.arcgis.com/4.11/esri/css/main.css" />
+    <link rel="stylesheet" href="https://js.arcgis.com/4.11/esri/css/main.css" />
     <link rel="stylesheet" href="./app/css/main.css" />
     <style>
       html,
@@ -27,7 +27,7 @@
         ]
       };
     </script>
-    <script src="https://jsdev.arcgis.com/4.11"></script>
+    <script src="https://js.arcgis.com/4.11"></script>
   </head>
 
   <body>
