--- a/demos/webmap.html
+++ b/demos/webmap.html
@@ -2,10 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="initial-scale=1,maximum-scale=1,user-scalable=no"
-    />
+    <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
     <title>Load a basic WebMap - 4.11</title>
 
     <style>
@@ -19,12 +16,9 @@
       }
     </style>
 
-    <link
-      rel="stylesheet"
-      href="https://jsdev.arcgis.com/4.11/esri/themes/light/main.css"
-    />
+    <link rel="stylesheet" href="https://js.arcgis.com/4.11/esri/themes/light/main.css" />
 
-    <script src="https://jsdev.arcgis.com/4.11/"></script>
+    <script src="https://js.arcgis.com/4.11/"></script>
 
     <script>
       require(["esri/views/MapView", "esri/WebMap"], function(MapView, WebMap) {
