--- a/slides/index.html
+++ b/slides/index.html
@@ -24,6 +24,9 @@
         color: orange;
         font-style: italic;
       }
+      .reveal a {
+        text-decoration: underline;
+      }
     </style>
 
     <!-- Printing and PDF exports -->
