--- a/demos/custom-theme/index.html
+++ b/demos/custom-theme/index.html
@@ -80,7 +80,10 @@
           search.search("Jackson, Georgia");
         });
 
-        var images = ["widget-things.png", "upside-down.png"];
+        var images = [
+          "//localhost/git/dev-summit-2019-customizing-widgets/demos/custom-theme/widget-things.png",
+          "//localhost/git/dev-summit-2019-customizing-widgets/demos/custom-theme/upside-down.png"
+        ];
 
         var img = document.createElement("img");
         img.className = "widget-things-image";
