--- a/slides/index.html
+++ b/slides/index.html
@@ -10,6 +10,7 @@
 
     <link rel="stylesheet" href="../node_modules/esri-reveal.js-templates/css/reveal.css" />
     <link rel="stylesheet" href="../node_modules/esri-reveal.js-templates/css/theme/dev-summit-2019.css" />
+    <link rel="stylesheet" href="./css/slides.css" />
 
     <!-- Theme used for syntax highlighting of code -->
     <link rel="stylesheet" href="../node_modules/esri-reveal.js-templates/lib/css/zenburn.css" />
